Bug 1981536 - Update Widgets section spacing/layout r=home-newtab-reviewers,nbarrett
Differential Revision: https://phabricator.services.mozilla.com/D260182

UltraBlame original commit: 3c1c3e0a566c0476b70e2193635600d257ae32f8

--- a/browser/extensions/newtab/content-src/components/Widgets/_Widgets.scss
+++ b/browser/extensions/newtab/content-src/components/Widgets/_Widgets.scss
@@ -57,6 +57,43 @@ MPL
 *
 /
 .
+discovery
+-
+stream
+.
+ds
+-
+layout
+.
+ds
+-
+layout
+-
+widgets
+{
+margin
+-
+inline
+:
+0
+;
+margin
+-
+block
+-
+end
+:
+var
+(
+-
+-
+space
+-
+xlarge
+)
+;
+}
+.
 widgets
 -
 container
@@ -82,32 +119,24 @@ display
 :
 grid
 ;
-border
-:
-1px
-solid
-var
-(
--
--
-border
--
-color
--
-card
-)
-;
 grid
 -
 template
 -
 columns
 :
-1fr
-1fr
-;
-column
+repeat
+(
+auto
 -
+fit
+minmax
+(
+300px
+300px
+)
+)
+;
 gap
 :
 var
@@ -119,10 +148,108 @@ space
 large
 )
 ;
+justify
+-
+content
+:
+center
+;
 width
 :
 100
 %
 ;
+/
+/
+Mirrors
+the
+grid
+-
+gap
+spacing
+used
+on
+/
+/
+.
+ds
+-
+outer
+-
+wrapper
+-
+breakpoint
+-
+override
+.
+ds
+-
+card
+-
+grid
+media
+(
+min
+-
+width
+:
+break
+-
+point
+-
+widest
+)
+{
+gap
+:
+var
+(
+-
+-
+space
+-
+xlarge
+)
+;
+}
+}
+/
+/
+Sections
+Layout
+Override
+.
+has
+-
+sections
+-
+grid
+&
+{
+media
+(
+min
+-
+width
+:
+break
+-
+point
+-
+widest
+)
+{
+gap
+:
+var
+(
+-
+-
+space
+-
+large
+)
+;
+}
 }
 }
