--- a/browser/extensions/newtab/css/activity-stream.css
+++ b/browser/extensions/newtab/css/activity-stream.css
@@ -38636,6 +38636,43 @@ MPL
 *
 /
 .
+discovery
+-
+stream
+.
+ds
+-
+layout
+.
+ds
+-
+layout
+-
+widgets
+{
+margin
+-
+inline
+:
+0
+;
+margin
+-
+block
+-
+end
+:
+var
+(
+-
+-
+space
+-
+xlarge
+)
+;
+}
+.
 widgets
 -
 container
@@ -38662,32 +38699,24 @@ display
 :
 grid
 ;
-border
-:
-1px
-solid
-var
-(
--
--
-border
--
-color
--
-card
-)
-;
 grid
 -
 template
 -
 columns
 :
-1fr
-1fr
-;
-column
+repeat
+(
+auto
 -
+fit
+minmax
+(
+300px
+300px
+)
+)
+;
 gap
 :
 var
@@ -38699,11 +38728,95 @@ space
 large
 )
 ;
+justify
+-
+content
+:
+center
+;
 width
 :
 100
 %
 ;
+}
+media
+(
+min
+-
+width
+:
+1122px
+)
+{
+.
+widgets
+-
+container
+:
+has
+(
+.
+lists
+)
+.
+widgets
+-
+container
+:
+has
+(
+.
+focus
+-
+timer
+)
+{
+gap
+:
+var
+(
+-
+-
+space
+-
+xlarge
+)
+;
+}
+}
+media
+(
+min
+-
+width
+:
+1122px
+)
+{
+.
+has
+-
+sections
+-
+grid
+.
+widgets
+-
+container
+{
+gap
+:
+var
+(
+-
+-
+space
+-
+large
+)
+;
+}
 }
 /
 *
@@ -38842,6 +38955,21 @@ newtab
 card
 -
 height
+)
+;
+box
+-
+shadow
+:
+var
+(
+-
+-
+box
+-
+shadow
+-
+card
 )
 ;
 }
@@ -40212,6 +40340,21 @@ align
 items
 :
 center
+;
+box
+-
+shadow
+:
+var
+(
+-
+-
+box
+-
+shadow
+-
+card
+)
 ;
 }
 .
